--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             <div class="row">
                 <div class="col-lg-6 col-xs-12">
                     <div class="left-text-content">
-                        <p>Hak Cipta Terpelihara &copy; 2020 MRSM Gemencheh 
+                        <p>Hak Cipta Terpelihara &copy; 2020 MRSM Gemencheh Muaz Amsyar
                         
                         <!-- - Design: <a rel="nofollow noopener" href="https://templatemo.com">TemplateMo</a> --> </p>
                     </div>
