Added placeholder image

--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -118,6 +118,8 @@
         <!-- ***** About Area Starts ***** -->
         <section class="section" id="about">
             <div class="container">
+                <img src="assets/images/redx.jpg" class="big-image">
+                <center><i><p>Pemandangan depan MRSM Gemencheh</p></i></center>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="right-text-content">
