--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="assets/images/mrsmlogo.png">
-    <title>MRSM Gemencheh</title>
+    <title>MRSM Gemencheh v1.0.0</title>
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -92,7 +92,7 @@
             <fieldset>
                 <button type="submit" class="main-button">Search</button>
             </fieldset>
-        </form>
+        </form> 
     </div>
 
     <!-- ***** Main Banner Area Start ***** -->
@@ -122,18 +122,21 @@
                 <center><i><p>Pemandangan depan MRSM Gemencheh</p></i></center>
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-xs-12">
-                        <div class="right-text-content">
+                        <div class="text-awoo">
+                                <img src="assets/images/redx.jpg" alt="" class="img-awoo">
                                 <p>Maktab Rendah Sains Mara Gemencheh Ulul Albab telah pun ditubuhkan pada 18 Disember 2006. Pembinaan tapak MRSM Gemencheh dirasmikan oleh __. 
-                                <br><br>Ianya terletak di Lot P.T. 6016 dan 5282, Mukim Gemencheh, Kampung Sungai Dua, Jalan Besar, 73200 Gemencheh, Negeri Sembilan.
-                                <br><br> Pengetua terkini ialah Tuan Haji Lokman Annas bin Othman sejak tahun 2020. MRSM Gemencheh dilengkapi dengan pelbagai fasiliti seperti penginapan asrama, kemudahan surau, dewan selera dan rekreasi sukan.
-                                <br><br>Untuk kemudahan pembelajaran, turut disediakan blok akademik yang dilengkapi dengan fasiliti seperti Pusat Sumber Pembelajaran, Bengkel Kemahiran Hidup, Bengkel Seni, Bengkel Memasak, Smart Classroom.</p>
+                                <br><br><br>Ianya terletak di Lot P.T. 6016 dan 5282, Mukim Gemencheh, Kampung Sungai Dua, Jalan Besar, 73200 Gemencheh, Negeri Sembilan.
+                                <br><br><br> Pengetua terkini ialah Tuan Haji Lokman Annas bin Othman sejak tahun 2020. MRSM Gemencheh dilengkapi dengan pelbagai fasiliti seperti penginapan asrama, kemudahan surau, dewan selera dan rekreasi sukan.
+                                <br><br><br>Untuk kemudahan pembelajaran, turut disediakan blok akademik yang dilengkapi dengan fasiliti seperti Pusat Sumber Pembelajaran, Bengkel Kemahiran Hidup, Bengkel Seni, Bengkel Memasak, Smart Classroom.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-xs-12">
-                        <div class="right-text-content">
+                        <div class="text-awoo">
                             <p>Sinonim dengan aliran Sains Tulen, Maktab Rendah Sains Mara Gemencheh juga mempunyai blok makmal yang mengandungi Makmal Sains Teras, Biologi, Fizik dan juga Kimia. Di makmal terdapat peralatan dan bahan kimia yang boleh merealisasikan dasar pendidikan negara dalam PdP abad ke-21.
-                            <br><br>Hasil sokongan daripada Badan Muafakat MRSM Gemencheh, pembinaan bangunan tambahan Surau Al-Fateh yang menelan kos sebanyak RM__ dapat dicapai. Selain itu, Badan Muafakat juga telah berjaya mengumpul dana untuk keselesaan pelajar di surau seperti pendingin hawa dan pemasangan kipas gergasi.
-                            <br><br>MRSM Gemencheh diterajui oleh __ guru dan staff sokongan serta __ orang pelajar pada tahun 2020. Program Ulul Albab diperkenalkan pada tahun 2010. Ini menjadikan MRSM Gemencheh sebagai MRSM Ulul Albab kedua selepas <a rel="nofollow noopener" href="https://www.facebook.com/mrsmkputra/" target="_parent">MRSM Kota Putra</a></p>
+                                <br><br><br>Hasil sokongan daripada Badan Muafakat MRSM Gemencheh, pembinaan bangunan tambahan Surau Al-Fateh yang menelan kos sebanyak RM__ dapat dicapai. Selain itu, Badan Muafakat juga telah berjaya mengumpul dana untuk keselesaan pelajar di surau seperti pendingin hawa dan pemasangan kipas gergasi.
+                                <br><br><br>MRSM Gemencheh diterajui oleh __ guru dan staff sokongan serta __ orang pelajar pada tahun 2020. Program Ulul Albab diperkenalkan pada tahun 2010. Ini menjadikan MRSM Gemencheh sebagai MRSM Ulul Albab kedua selepas <a rel="nofollow noopener" href="https://www.facebook.com/mrsmkputra/" target="_parent">MRSM Kota Putra</a></p>
+                            <img src="assets/images/redx.jpg" alt="" class="img-awoo">
+                            
                         </div>
                     </div>
                 </div>
