--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -124,9 +124,14 @@
     <section class="section" id="about">
         <div class="container">
             <img src="assets/images/redx.jpg" class="big-image">
-            <center><i>
+            <center>
+                <i>
                     <p>Pemandangan depan MRSM Gemencheh</p>
                 </i>
+            </center>
+
+            <br><br>
+
 
             <div class="gallery">
                 <a target="_blank" href="assets/images/redx.jpg">
@@ -230,7 +235,7 @@
                 <div class="desc">Add a description of the image here</div>
             </div><br><br>
 
-            </center>
+
             <!-- <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="text-awoo">
