Copyright div changes

--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -44,9 +44,7 @@
 
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
-        <div class="copyright">
-            <p>The Website is still in Beta! Feel free to help with development by clicking <a href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io">here.</a></p>
-         </div>
+
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -134,112 +132,7 @@
             </center>
 
             <br><br>
-
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
-
-            <div class="gallery">
-                <a target="_blank" href="assets/images/redx.jpg">
-                    <img src="assets/images/redx.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div><br><br>
-
-
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="text-awoo">
                         <img src="assets/images/redx.jpg" alt="" class="img-awoo">
@@ -252,7 +145,8 @@
                             dewan selera dan rekreasi sukan.
                             <br><br><br>Untuk kemudahan pembelajaran, turut disediakan blok akademik yang dilengkapi
                             dengan fasiliti seperti Pusat Sumber Pembelajaran, Bengkel Kemahiran Hidup, Bengkel Seni,
-                            Bengkel Memasak, Smart Classroom.</p>
+                            Bengkel Memasak, Smart Classroom.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
@@ -268,13 +162,20 @@
                             <br><br><br>MRSM Gemencheh diterajui oleh __ guru dan staff sokongan serta __ orang pelajar
                             pada tahun 2020. Program Ulul Albab diperkenalkan pada tahun 2010. Ini menjadikan MRSM
                             Gemencheh sebagai MRSM Ulul Albab kedua selepas <a rel="nofollow noopener"
-                                href="https://www.facebook.com/mrsmkputra/" target="_parent">MRSM Kota Putra</a></p>
+                                href="https://www.facebook.com/mrsmkputra/" target="_parent">MRSM Kota Putra</a>
+                        </p>
                         <img src="assets/images/redx.jpg" alt="" class="img-awoo">
 
                     </div>
                 </div>
-            </div> -->
+            </div>
+
         </div>
+        <div class="copyright">
+            <p>The Website is still in Beta! Feel free to help with development by clicking <a
+                    href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io">here.</a></p>
+        </div>
+
     </section>
     <!-- ***** About Area Ends ***** -->
 
