--- a/bkp/index.html
+++ b/bkp/index.html
@@ -96,7 +96,7 @@
                   <img class="second-slide" src="images/banner2.png" alt="Second slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Badan Kepimpinan Pelajar</h1>
+                        <h1>Badan Wakil Pelajar</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and </p>
                         <a  href="#">Read More</a>
                      </div>
@@ -106,7 +106,7 @@
                   <img class="third-slide" src="images/banner2.png" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Badan Kepimpinan Pelajar</h1>
+                        <h1>Sekretariat Kepimpinan Pelajar</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and </p>
                         <a  href="#">Read More</a>
                      </div>
@@ -274,7 +274,7 @@
       </div>
       <!-- end service -->
       <!-- Download -->
-      <div id="download" class="download">
+      <!-- <div id="download" class="download">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -300,10 +300,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end Download -->
       <!-- Testimonial -->
-      <div id="testimonial" class="testimonial">
+      <!-- <div id="testimonial" class="testimonial">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -376,8 +376,8 @@
                </div>
             </div>
          </div>
-      </div>
-      <!-- end Testimonial --> 
+      </div> -->
+      <!-- end Testimonial  -->
       <!--  footer --> 
       <footr>
          <div class="footer">
