latar-belakang additions

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" href="assets-main/images/mrsmlogo.png">
+    <link rel="icon" href="images/mrsmlogo.png">
     <title>MRSM Gemencheh v1.2.0</title>
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets-main/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="assets-main/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 
-    <link rel="stylesheet" href="assets-main/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-    <link rel="stylesheet" href="assets-main/css/owl-carousel.css">
+    <link rel="stylesheet" href="css/owl-carousel.css">
 
-    <link rel="stylesheet" href="assets-main/css/lightbox.css">
+    <link rel="stylesheet" href="css/lightbox.css">
 
-    <link rel="stylesheet" href="assets-main/css/custom.css"> <!-- Hanif Mustakim -->
+    <link rel="stylesheet" href="css/custom.css"> <!-- Hanif Mustakim -->
 
 </head>
 
@@ -51,7 +51,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img id="homeLogo" class="" src="assets-main/images/mrsmlogo.png" alt="#"> MRSM Gemencheh
+                            <img id="homeLogo" class="" src="images/mrsmlogo.png" alt="#"> MRSM Gemencheh
                         </a>
                         <!-- ***** Logo End ***** -->
 
@@ -119,7 +119,7 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="assets-main/images/slide-01.jpg" alt="">
+                    <img src="images/slide-01.jpg" alt="">
                     <div class="text-content">
                         <h3>Selamat Datang</h3>
                         <h5>MRSM GEMENCHEH</h5>
@@ -132,7 +132,7 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="assets-main/images/slide-02.jpg" alt="">
+                    <img src="images/slide-02.jpg" alt="">
                     <div class="text-content">
                         <h3>Berita Terkini</h3>
                         <h5>MRSM GEMENCHEH</h5>
@@ -145,7 +145,7 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="assets-main/images/slide-03.jpg" alt="">
+                    <img src="images/slide-03.jpg" alt="">
                     <div class="text-content">
                         <h3>Ijtihadik dan Quranik</h3>
                         <h5>Kokurikulum Terbeza UA</h5>
@@ -172,19 +172,19 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
-                                    <img src="assets-main/images/service-item-01.png" alt="">
+                                    <img src="images/service-item-01.png" alt="">
                                     <h4>Quranik</h4>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
-                                    <img src="assets-main/images/service-item-01.png" alt="">
+                                    <img src="images/service-item-01.png" alt="">
                                     <h4>Ensiklopedik</h4>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
-                                    <img src="assets-main/images/contact-info-03.png" alt="">
+                                    <img src="images/contact-info-03.png" alt="">
                                     <h4>Ijtihadik</h4>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <img src="assets-main/images/features-icon-1.png" alt="">
+                            <img src="images/features-icon-1.png" alt="">
                         </div>
                         <div class="features-content">
                             <h4>Visi MRSM</h4>
@@ -231,7 +231,7 @@
                     data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <img src="assets-main/images/features-icon-1.png" alt="">
+                            <img src="images/features-icon-1.png" alt="">
                         </div>
                         <div class="features-content">
                             <h4>Misi MRSM</h4>
@@ -245,7 +245,7 @@
                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
-                            <img src="assets-main/images/features-icon-1.png" alt="">
+                            <img src="images/features-icon-1.png" alt="">
                         </div>
                         <div class="features-content">
                             <h4>Nilai Teras</h4>
@@ -320,38 +320,38 @@
                         <div class="row grid">
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all des">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-01.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-01.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all dev">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-02.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-02.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all gra">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-03.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-03.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all tsh">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-04.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-04.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all dev">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-05.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-05.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all des">
                                 <div class="item">
-                                    <a href="assets-main/images/project-big-item-06.jpg" data-lightbox="image-1"
-                                        data-title="Our Projects"><img src="assets-main/images/fen.jpg" alt=""></a>
+                                    <a href="images/project-big-item-06.jpg" data-lightbox="image-1"
+                                        data-title="Our Projects"><img src="images/fen.jpg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -377,7 +377,7 @@
                     <div class="owl-carousel owl-theme">
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets-main/images/dum.jpg" alt="">
+                                <img src="images/dum.jpg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
@@ -392,7 +392,7 @@
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets-main/images/dum.jpg" alt="">
+                                <img src="images/dum.jpg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
@@ -407,7 +407,7 @@
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets-main/images/dum.jpg" alt="">
+                                <img src="images/dum.jpg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
@@ -422,7 +422,7 @@
                         </div>
                         <div class="item author-item">
                             <div class="member-thumb">
-                                <img src="assets-main/images/dum.jpg" alt="">
+                                <img src="images/dum.jpg" alt="">
                                 <div class="hover-effect">
                                     <div class="hover-content">
                                         <ul>
@@ -455,9 +455,9 @@
                         <div class="row">
                             <div class="col-md-2">
                                 <ul class="contact-info">
-                                    <li><img src="assets-main/images/contact-info-01.png" alt=""></li>
-                                    <li><img src="assets-main/images/contact-info-02.png" alt=""></li>
-                                    <li><img src="assets-main/images/contact-info-03.png" alt=""></li>
+                                    <li><img src="images/contact-info-01.png" alt=""></li>
+                                    <li><img src="images/contact-info-02.png" alt=""></li>
+                                    <li><img src="images/contact-info-03.png" alt=""></li>
                                 </ul>
                             </div>
                             <div class="col-md-10">
@@ -550,24 +550,24 @@
 
 
     <!-- jQuery -->
-    <script src="assets-main/js/jquery-2.1.0.min.js"></script>
+    <script src="js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets-main/js/popper.js"></script>
-    <script src="assets-main/js/bootstrap.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="assets-main/js/owl-carousel.js"></script>
-    <script src="assets-main/js/scrollreveal.min.js"></script>
-    <script src="assets-main/js/waypoints.min.js"></script>
-    <script src="assets-main/js/jquery.counterup.min.js"></script>
-    <script src="assets-main/js/imgfix.min.js"></script>
-    <script src="assets-main/js/slick.js"></script>
-    <script src="assets-main/js/lightbox.js"></script>
-    <script src="assets-main/js/isotope.js"></script>
+    <script src="js/owl-carousel.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/imgfix.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/isotope.js"></script>
 
     <!-- Global Init -->
-    <script src="assets-main/js/custom.js"></script>
+    <script src="js/custom.js"></script>
 
     <script>
 
