--- a/latar-belakang.html
+++ b/latar-belakang.html
@@ -10,23 +10,24 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" href="assets/images/mrsmlogo.png">
+    <link rel="icon" href="images/mrsmlogo.png">
     <title>MRSM Gemencheh v1.2.0</title>
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-    <link rel="stylesheet" href="assets/css/owl-carousel.css">
+    <link rel="stylesheet" href="css/owl-carousel.css">
 
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="css/lightbox.css">
 
-    <link rel="stylesheet" href="assets/css/custom.css"> <!-- Hanif Mustakim -->
+    <link rel="stylesheet" href="css/custom.css"> <!-- Hanif Mustakim -->
 
-    <link rel="stylesheet" href="assets/css/gallery.css">
+    <link rel="stylesheet" href="css/gallery.css">
+
 
 </head>
 
@@ -51,7 +52,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img id="homeLogo" class="" src="assets/images/mrsmlogo.png" alt="#"> MRSM Gemencheh
+                            <img id="homeLogo" class="" src="images/mrsmlogo.png" alt="#"> MRSM Gemencheh
                         </a>
                         <!-- ***** Logo End ***** -->
 
@@ -107,10 +108,10 @@
             <!-- Item -->
             <div class="item">
                 <div class="img-fill">
-                    <img src="assets/images/slide-01.jpg" alt="">
+                    <img src="images/slide-01.jpg" alt="">
                     <div class="text-content">
-                        <h3>Latar Belakang</h3>
-                        <h5>MRSM GEMENCHEH</h5>
+                        <h3>MRSM GEMENCHEH</h3>
+                        <h5>'Mendidik Hamba, Membangun Khalifah'</h5>
                     </div>
                 </div>
             </div>
@@ -124,81 +125,101 @@
     <!-- ***** About Area Starts ***** -->
     <section class="section" id="about">
         <div class="container">
-            <img src="assets/images/redx.jpg" class="big-image">
+            <img src="images/redx.jpg" class="big-image">
             <center>
                 <i>
                     <p>Pemandangan depan MRSM Gemencheh</p>
-                </i>
+                </i><br><br>
             </center>
-
-            <br><br>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-xs-12">
-                    <div class="text-awoo">
-                        <img src="assets/images/redx.jpg" alt="" class="img-awoo">
-                        <p>Maktab Rendah Sains Mara Gemencheh Ulul Albab telah pun ditubuhkan pada 18 Disember 2006.
-                            Pembinaan tapak MRSM Gemencheh dirasmikan oleh __.
-                            <br><br><br>Ianya terletak di Lot P.T. 6016 dan 5282, Mukim Gemencheh, Kampung Sungai Dua,
-                            Jalan Besar, 73200 Gemencheh, Negeri Sembilan.
-                            <br><br><br> Pengetua terkini ialah Tuan Haji Lokman Annas bin Othman sejak tahun 2020. MRSM
-                            Gemencheh dilengkapi dengan pelbagai fasiliti seperti penginapan asrama, kemudahan surau,
-                            dewan selera dan rekreasi sukan.
-                            <br><br><br>Untuk kemudahan pembelajaran, turut disediakan blok akademik yang dilengkapi
-                            dengan fasiliti seperti Pusat Sumber Pembelajaran, Bengkel Kemahiran Hidup, Bengkel Seni,
-                            Bengkel Memasak, Smart Classroom.
-                        </p>
+
+                <div class="col">
+                    <p>MRSM Gemencheh adalah MRSM yang ditubuhkan di Malaysia yang menggunakan peruntukan Rancangan
+                        Malaysia yang kelapan. MRSM Gemencheh merupakan MRSM yang ketiga ditubuhkan di Negeri Sembilan.
+                        Ia merupakan salah sebuah institut pendidikan di bawah kelolaan MARA selain daripada MRSM Kuala
+                        Klawang dan MRSM Serting serta Kolej MARA Seremban. MRSM Gemencheh yang berkeluasan 56 ekar
+                        terletak kira-kira 11 km dari pekan Gemencheh dan 13 km dari pekan Gemas.</p>
+                </div>
+                <div class="col">
+                    <p>Kapasiti pelajar adalah seramai 840 orang, dengan 510 orang pelajar menengah rendah dan 330 orang
+                        pelajar menengah atas. MRSM Gemencheh mula beroperasi pada 18 Disember 2006 tetapi pengambilan
+                        pertama pelajar bermula pada 16 April 2007 dan pengambilan kedua pada 7 Mei 2007. Pengambilan
+                        pertama hanya melibatkan pelajar tingkatan 1 dan tingkatan 4 seramai 360 orang. Bilangan guru
+                        ketika itu adalah 56 orang guru dan staf seramai 25 orang.</p>
+                </div><br><br><br><br><br><br><br><br><br>
+
+                <p style="text-align: center;">Hasil cetusan idea daripada Pengerusi MARA YB. Dato’ Seri Idris bin Jusoh pada September 2008, lahirlah MRSM Ulul Albab di MRSM Kota Putra pada tahun 2009, di MRSM Gemencheh pada tahun 2010 selaku MRSM kedua serta MRSM Kepala Batas pada 2011. Matlamat Program Ulul Albab ini adalah untuk melahirkan generasi Al Quran yang beriman, bertaqwa, berilmu, berakhlak mulia, berketrampilan, bertanggung jawab dan dapat berbakti kepada agama, bangsa dan negara serta melahirkan pelajar-pelajar yang berlatar belakangkan Sains dan Tahfiz Al-Quran yang dapat memenuhi syarat untuk memenuhi pengajian dalam bidang professional dan teknikal di mana-mana universiti tersohor di seluruh dunia. Program Ulul Albab juga berteraskan tiga elemen utama iaitu ensiklopedik, ijtihadik dan quranik</p>
+
+            </div>
+
+
+        </div>
+
+        </div><br><br>
+<div class="container">
+    <div class="row">
+        <div class="col">
+
+        </div>
+        <div class="col">
+            <h4>Setakat 2020</h4>
+            <h1>APA ANDA PERLU TAHU?</h1><br><br>
+            <p>Ketika ini MRSM Gemencheh mempunyai pelajar yang mengikuti program Ulul Albab seramai 840 pelajar. Jumlah guru juga telah meningkat kepada 95 orang dan staf seramai 29 orang. Sejarah kepimpinan MRSM Gemencheh dimulai dengan En. Matias Francisco De Menezes sebagai Pengetua pertama bermula tahun 2007 hingga 2008. Pengetua kedua di bawah pimpinan Tn. Haji A. Bakar bin A Rahim pada tahun 2008 hingga 2010. Seterusnya Tn. Haji Ghazi bin Samsudin selaku pengetua ketiga berkhidmat di MRSM Gemencheh pada tahun 2010 hingga Mei 2017. Kemudian, Tn. Haji Maznan bin Maamor pada 29 Mei 2017 hingga 2019. Bermula awal tahun 2020 hingga sekarang, pengetua MRSM Gemencheh ialah Tuan Haji Lokman Anas bin Othman.</p>
+        </div>
+    </div>
+</div>
+    </section>
+    <!-- ***** About Area Ends ***** -->
+    <!-- ***** Footer Start ***** -->
+    <footer>
+
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xs-12">
+                    <p style="color: aliceblue;">The Website is still in Beta! Feel free to help with development by
+                        clicking <a href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io">here.</a></p>
+                    <div class="left-text-content">
+                        <p>Hak Cipta Terpelihara &copy; 2020 MRSM Gemencheh
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-xs-12">
-                    <div class="text-awoo">
-                        <p>Sinonim dengan aliran Sains Tulen, Maktab Rendah Sains Mara Gemencheh juga mempunyai blok
-                            makmal yang mengandungi Makmal Sains Teras, Biologi, Fizik dan juga Kimia. Di makmal
-                            terdapat peralatan dan bahan kimia yang boleh merealisasikan dasar pendidikan negara dalam
-                            PdP abad ke-21.
-                            <br><br><br>Hasil sokongan daripada Badan Muafakat MRSM Gemencheh, pembinaan bangunan
-                            tambahan Surau Al-Fateh yang menelan kos sebanyak RM__ dapat dicapai. Selain itu, Badan
-                            Muafakat juga telah berjaya mengumpul dana untuk keselesaan pelajar di surau seperti
-                            pendingin hawa dan pemasangan kipas gergasi.
-                            <br><br><br>MRSM Gemencheh diterajui oleh __ guru dan staff sokongan serta __ orang pelajar
-                            pada tahun 2020. Program Ulul Albab diperkenalkan pada tahun 2010. Ini menjadikan MRSM
-                            Gemencheh sebagai MRSM Ulul Albab kedua selepas <a rel="nofollow noopener"
-                                href="https://www.facebook.com/mrsmkputra/" target="_parent">MRSM Kota Putra</a>
-                        </p>
-                        <img src="assets/images/redx.jpg" alt="" class="img-awoo">
-
+                <div class="col-lg-6 col-xs-12">
+                    <div class="right-text-content">
+                        <ul class="social-icons">
+                            <li>
+                                <p>Ikuti Kami</p>
+                            </li>
+                            <li><a rel="" href="https://m.facebook.com/MRSM-ULUL-ALBAB-GEMENCHEH-264740388025/"><i
+                                        class="fa fa-facebook"></i></a></li>
+                            <!--<li><a rel="nofollow" href=""><i class="fa fa-twitter"></i></a></li> -->
+                        </ul>
                     </div>
                 </div>
             </div>
-
         </div>
-        <div class="copyright">
-            <p>The Website is still in Beta! Feel free to help with development by clicking <a
-                    href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io">here.</a></p>
-        </div>
-
-    </section>
-    <!-- ***** About Area Ends ***** -->
+    </footer>
 
 
     <!-- jQuery -->
-    <script src="assets/js/jquery-2.1.0.min.js"></script>
+    <script src="js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/scrollreveal.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/imgfix.min.js"></script>
-    <script src="assets/js/slick.js"></script>
-    <script src="assets/js/lightbox.js"></script>
-    <script src="assets/js/isotope.js"></script>
+    <script src="js/owl-carousel.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/imgfix.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/isotope.js"></script>
 
     <!-- Global Init -->
-    <script src="assets/js/custom.js"></script>
+    <script src="js/custom.js"></script>
 
     <script>
 
