--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                                             href="http://mrsmgemencheh.edu.my/ePelajar/Login.asp">e-Pelajar</a></li>
                                     <li><a target="_blank" href="https://mrsm.awfatech.com/gemencheh/">e-Outing</a></li>
                                     <li><a target="_blank" href="https://muafakatmrsmgmc.com/wp/">Muafakat</a></li>
+                                    <li><a target="_blank" href="https://mrsm-gemencheh.github.io/">Beta Website</a></li>
 
                                     <!-- <li><a href="http://flyops.zeroprogrammer.com/sbfirst.php">Fly-Ops</a></li> -->
                                 </ul>
