:fireworks: Changed title and commented unused sections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
 
-  <title>MRSM Gemencheh + | Laman BKP dan Sejarah</title>
+  <title>BKP MRSM Gemencheh</title>
+  <meta name="description" content="Laman sesawang Badan Kepimpinan Pelajar MRSM Gemencheh!">
   <link rel="icon" href="img/mrsmlogo.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -72,7 +73,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">
-          Selamat datang ke laman sesawang MRSM Gemencheh +!
+          Selamat datang ke laman sesawang BKP MRSM Gemencheh!
         </p>
         <p class="subtitle">
           "Dipimpin untuk memimpin"
@@ -151,7 +152,7 @@
   </div>
 
 
-  <div class="section">
+  <!-- <div class="section">
     <div class="content">
       <h1>Sejarah MRSM Gemencheh</h1>
       <p>Himpunan cerita dan kisah tentang latar belakang MRSM Gemencheh, di sediakan oleh BIRO Homeroom 20/21</p>
@@ -170,10 +171,10 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="section">
+  <!-- <div class="section">
     <div class="content">
       <h1>Blog dan Impetus</h1>
       <p>Beberapa coretan cerita pendek daripada pelajar dan koleksi majalah maktab yang lepas.</p>
@@ -188,7 +189,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="section">
