--- a/bwp.html
+++ b/bwp.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+    integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
   <link rel="stylesheet" href="css/bulma-rtl.css" />
   <link rel="stylesheet" href="css/bulma-rtl.css.map" />
   <link rel="stylesheet" href="css/bulma-rtl.min.css" />
@@ -16,7 +21,6 @@
   <link rel="stylesheet" href="css/addon.css">
 
   <style>
-
     .fa {
       padding: 20px;
       font-size: 30px;
@@ -25,7 +29,6 @@
       text-decoration: none;
       border-radius: 50%;
     }
-    
   </style>
 
 </head>
@@ -68,7 +71,8 @@
 
         <div class="content">
 
-          <h1>Badap Wakil Pelajar<a target="_blank" href="https://www.instagram.com/bwpgmcua/" class="fa fa-instagram"></a></h1>
+          <h1>Badap Wakil Pelajar<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+              class="fa fa-instagram"></a></h1>
 
           <div class="block">
             <i>"Dipimpin untuk memimpin"</i>
