--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
 <head>
 
   <title>BKP MRSM Gemencheh</title>
+
   <meta name="description" content="Laman sesawang Badan Kepimpinan Pelajar MRSM Gemencheh!">
+
   <link rel="icon" href="img/mrsmlogo.png">
+
   <meta charset="utf-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="css/bulma-rtl.css" />
-  <link rel="stylesheet" href="css/bulma-rtl.css.map" />
-  <link rel="stylesheet" href="css/bulma-rtl.min.css" />
-  <link rel="stylesheet" href="css/bulma.css" />
-  <link rel="stylesheet" href="css/bulma.css.map" />
-  <link rel="stylesheet" href="css/bulma.min.css" />
   <link rel="stylesheet" href="css/addon.css">
-  <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+    integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="manifest" href="manifest.json">
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js');
+    }
+  </script>
+
+  <script defer src="/index.js"></script>
 
   <style>
     i {
@@ -54,15 +65,15 @@
               </a> -->
               <!-- <a class="navbar-item">
                 Documentation
-              </a>
-              <span class="navbar-item">
+              </a> -->
+              <span id="add-button" class="navbar-item">
                 <a class="button is-primary is-inverted">
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
                   <span>Download</span>
                 </a>
-              </span> -->
+              </span>
             </div>
           </div>
         </div>
