:crescent_moon: Updated BWP 21/22
Changed to bulma's cdn, started working on BWP 21/22 page

--- a/bwp/bwp2021.html
+++ b/bwp/bwp2021.html
@@ -11,13 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/bulma.css" />
-  <link rel="stylesheet" href="../css/bulma-rtl.css.map" />
-  <link rel="stylesheet" href="../css/bulma-rtl.min.css" />
-  <link rel="stylesheet" href="../css/bulma.css" />
-  <link rel="stylesheet" href="../css/bulma.css.map" />
-  <link rel="stylesheet" href="../css/bulma.min.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+    integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="../css/addon.css">
+
   <style>
     .fa {
       padding: 20px;
@@ -52,13 +52,18 @@
             <li><a href="../bwp.html">Badan Wakil Pelajar</a>
               <ul>
                 <li><a class="is-active">BWP 20/21</a></li>
+                <li><a href="./bwp2122.html">BWP 21/22</a></li>
               </ul>
             </li>
 
             <li><a href="../prs.html">Pembimbing Rakan Sebaya</a></li>
+
             <li><a href="../emc.html">English Motivational Committee</a></li>
+
             <li><a href="../alk.html">Ahli Lembaga Koperasi</a></li>
+
             <li><a href="../badar.html">Badan Dakwah dan Rohani</a></li>
+
             <li><a href="../ldp.html">Lembaga Disiplin Pelajar</a></li>
 
           </ul>
@@ -69,7 +74,8 @@
 
         <div class="content">
 
-          <h1>Badap Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/" class="fa fa-instagram"></a></h1>
+          <h1>Badap Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+              class="fa fa-instagram"></a></h1>
 
           <div class="block">
 
